--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,7 @@
   <app-root></app-root>
 
   <!-- JavaScript Libraries -->
+
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="lib/chart/chart.min.js"></script>
@@ -46,6 +47,15 @@
   <script src="lib/tempusdominus/js/moment.min.js"></script>
   <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
   <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+  <script>
+    $(document).ready(function() {
+      $(document).on('click', '.btn-outline-primary[data-toggle="modal"]', function() {
+        $('#exampleModal').modal('show');
+      });
+    });
+    </script>
+
+
 
   <!-- Template Javascript -->
   <script src="assets/js/main.js"></script>
